# eradio

./: .gitignore  LICENSE  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  eradio.spec
.github/workflows/: #build.yml#  build.yml  release.yml
data/: Makefile.am  efl-internet-radio.desktop  eradio.desktop
src/: Makefile.am  appdata.h  efl-internet-radio  eradio.edc  favorites.c  favorites.h  http.c  http.h  main.c  notes.md  radio_player.c  radio_player.h  station_list.c  station_list.h  ui.c  ui.h  visualizer.c  visualizer.h
src/tests/: test_basic.c
